# phasar

./: .gitignore  CMakeLists.txt  bootstrap.sh
include/phasar/PhasarLLVM/ControlFlow/: LLVMBasedCFG.h
include/phasar/Utils/: LLVMIRToSrc.h
lib/DB/: CMakeLists.txt  DBConn.cpp  ProjectIRDB.cpp
lib/PhasarLLVM/ControlFlow/: LLVMBasedCFG.cpp  LLVMBasedICFG.cpp
lib/PhasarLLVM/TypeHierarchy/: LLVMTypeHierarchy.cpp
lib/Utils/: LLVMIRToSrc.cpp
targets/: cd.c  ex.c  locations.json  locations_fping_stats.json  locations_inotify_stats.json  locations_inotify_stats_nostat.json  locations_json.json  locations_memcached.json  locations_memcached_command.json  locations_memcached_single.json  locations_memcached_stats_filtered.json  locations_redis_cluster_manager.json  locations_silver_searcher_ignore.json  min_ex.c  min_ex.json  parson_parse.json  parson_serialize.json  preparation.c  slicingEx.c  slicingEx2.c  slicingEx2.h  switch-ex.o.json  switch.json  switch_ex.c  test.cpp
targets/mini/: Makefile  mini.c  mini.json  test
tools/: CMakeLists.txt
tools/boomerang/: CMakeLists.txt  slicer.cpp
tools/module-extractor/: CMakeLists.txt  SelectiveDeclPrinter.cpp  SelectiveDeclPrinter.h  SelectiveStmtPrinter.cpp  SelectiveStmtPrinter.h  back_mapper.cpp  back_mapper.h  include_handling.cpp  include_handling.h  mytest.cpp  printer.cpp  printer.h  result_comparator.cpp  slicer.cpp  slicer.h  source_utils.cpp  source_utils.h
tools/phasar/: depfinder.cpp  slicer.cpp
unittests/: CMakeLists.txt
unittests/Slicer/: CMakeLists.txt  Parson_test.cpp  SliceComparator.cpp  SliceITCW_defectsTest.cpp
utils/: install-llvm.sh
